iterating through template

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 
-{{ company[1]["name"] }}
 
 <h2>{{ page_title }}</h2>
 <p>
@@ -18,47 +17,40 @@
     fourteenth to fill into their party.
 </p>
 
+{% for member in company %}
+
+
+
 <div class="row feature">
+
+    {% if loop.index % 2 != 0 %}
+
     <div class="col-md-7">
-        <h3>Thorin Oakenshield</h3>
-        <p>
-            Thorin II was born in TA 2746 to the Dwarf prince Thráin II in the city of the Lonely Mountain. Early in his
-            youth,
-            Thorin and the other Dwarves of the Lonely Mountain were forced to flee by the dragon Smaug, in TA 2770.
-            While in
-            exile,
-            he quickly grew to into a capable warrior. This was demonstrated at the Battle of Azanulbizar, near Moria,
-            in TA
-            2799.
-            He fought with one of the Dwarven armies beneath Moria's East-gate, and at some point in the battle, his
-            shield
-            broke,
-            and, using an oaken tree branch found on the ground as a shield, he gained the epithet "Oakenshield," which
-            remained
-            with him even in death.
-        </p>
+        <h3>{{ loop.index }}. {{ member.name }}</h3>
+        <p>{{ member.description }}</p>
     </div>
     <div class="col-md-5">
-        <img src="https://rare-gallery.com/uploads/posts/1110430-movies-The-Hobbit-Person-dwarfs-mythology-Thorin-Oakenshield-screenshot-action-film-mercenary-profession-woman-warrior.jpg"
-            alt="">
+        <img src="{{ member.image_source }}" alt="character_image" class="featurette-image image-responsive">
     </div>
+    {% else %}
+    <div class="col-md-5">
+        <img src="{{ member.image_source }}" alt="character_image" class="featurette-image image-responsive">
+    </div>
+    <div class="col-md-7">
+        <h3>{{ loop.index }}. {{ member.name }}</h3>
+        <p>{{ member.description }}</p>
+    </div>
+
+    {% endif %}
 </div>
 
-<div class="row featurette">
-    <div class="col-md-5">
-        <img src="https://vignette.wikia.nocookie.net/lotr/images/b/b4/The-Hobbit-Fili-and-Kili.jpg" alt="">
-    </div>
-    <div class="col-md-7">
-        <h3>Fili and Kili</h3>
-        <p>
-            Fíli and Kíli were nephews of Thorin, who was the elder brother of their mother, Dís. They were also nephews
-            of
-            Frerin,
-            grandsons of Thráin II, and great-grandsons of Thrór. Fíli's most distinguishing feature was his long nose,
-            the
-            longest
-            of any of the Dwarves in Thorin's company.
-        </p>
-    </div>
-</div>
+{% if loop.index != loop.length %}
+
+<hr class="featurette-divider">
+
+{%endif %}
+
+{% endfor %}
+
+
 {% endblock %}
